# trent-agent

./: .crewignore  .env.example  .gitignore  MANIFEST.in  README.md  check_collections.py  check_current_database.py  check_multiple_databases.py  check_project_access.py  create_clean_env.py  debug_products_access.py  find_data_database.py  fix_env.py  fix_env_file.py  list_all_collections.py  list_all_collections_current.py  pyproject.toml  quick_test_products.py  report.md  requirements.txt  resolve_project_id.py  test_categories.py  test_collections.py  test_collections_print.py  test_gemini_api.py  test_gemini_error.py  test_google_cloud_firestore.py  test_permissions.py  test_products.py  test_products_quick.py  test_products_simple.py  test_project_id.py  test_project_number.py  test_read_products.py  update_gemini_api.py
src/trent_agent/: crew.py  debug_env.py  main.py
src/trent_agent/config/: __init__.py  agents.yaml  tasks.yaml
src/trent_agent/examples/: __init__.py
src/trent_agent/tools/: README.md  __init__.py  firebase_tool.py
